# Scream

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  TODO.txt  shaders.bat  shaders.sh
installer/: _windows.iss  macos.sh  windows.bat
src/: common.h  dsp.h  gui.c  gui.h  gui_lfo.c  gui_lfo_points.h  icons.c  im_points.c  im_points.h  imgui.h  param_smoothing.h  params_and_events.c  platform_osx.m  platform_win.c  plot_dsp.h  plugin.c  plugin.h  resource_manager.c  resource_manager.h  state.c  widgets.h
src/libs/: ADAA.h  adsr.h  linked_arena.c  linked_arena.h  nanosvgrast3.c  nanosvgrast3.h  nanovg2.c  nanovg2.h  nanovg_sokol.c  nanovg_sokol.h  pffft.c  pffft.h  sokol_gfx.h  sort.h  synth.h  texteditor.c  texteditor.h  tooltip.c  tooltip.h
src/shaders/: dualfilter.glsl  knob.glsl  lfo.glsl  shaders.glsl  texquad.glsl
tools/: svg_parser.c
